--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "font-awesome": "^4.7.0",
     "html2canvas": "^1.0.0-alpha.12",
     "jspdf": "^1.4.1",
+    "node-sass": "^4.13.1",
     "rxjs": "6.0.0",
     "sweetalert2": "^7.25.6",
     "zone.js": "^0.8.26"
